[gd_scene load_steps=8 format=3 uid="uid://f4rtc2d71bi8"]

[ext_resource type="Texture2D" uid="uid://b8w151n0j563v" path="res://Sprites/UI/botões/botão g.png" id="1_hqtmt"]
[ext_resource type="Script" uid="uid://q67d5llac072" path="res://Scripts/main_menu.gd" id="1_tfrft"]
[ext_resource type="Texture2D" uid="uid://8ny4lelofd" path="res://Sprites/UI/botões/botão g (click).png" id="2_tfrft"]
[ext_resource type="Texture2D" uid="uid://b71jk8ppmact0" path="res://Sprites/UI/botões/botão g (selecionado).png" id="3_uv623"]

[sub_resource type="LabelSettings" id="LabelSettings_hqtmt"]
font_size = 96

[sub_resource type="SystemFont" id="SystemFont_tfrft"]
font_names = PackedStringArray("Monospace")
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_uv623"]
font = SubResource("SystemFont_tfrft")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tfrft")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -285.0
offset_top = 119.0
offset_right = 285.0
offset_bottom = 251.0
grow_horizontal = 2
text = "DEADSHADE"
label_settings = SubResource("LabelSettings_hqtmt")

[node name="ButtonStartGame" type="TextureButton" parent="."]
texture_filter = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.5
offset_top = 9.0
offset_right = 38.5
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("1_hqtmt")
texture_pressed = ExtResource("2_tfrft")
texture_hover = ExtResource("3_uv623")
stretch_mode = 4

[node name="Label" type="Label" parent="ButtonStartGame"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Jogar"
label_settings = SubResource("LabelSettings_uv623")

[node name="ButtonOptions" type="TextureButton" parent="."]
texture_filter = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.5
offset_top = 75.0
offset_right = 38.5
offset_bottom = 115.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("1_hqtmt")
texture_pressed = ExtResource("2_tfrft")
texture_hover = ExtResource("3_uv623")

[node name="Label" type="Label" parent="ButtonOptions"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Opções"
label_settings = SubResource("LabelSettings_uv623")

[node name="ButtonCredits" type="TextureButton" parent="."]
texture_filter = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.5
offset_top = 144.0
offset_right = 38.5
offset_bottom = 184.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("1_hqtmt")
texture_pressed = ExtResource("2_tfrft")
texture_hover = ExtResource("3_uv623")
stretch_mode = 4

[node name="Label" type="Label" parent="ButtonCredits"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Créditos"
label_settings = SubResource("LabelSettings_uv623")

[node name="ButtonQuit" type="TextureButton" parent="."]
self_modulate = Color(1, 0.373203, 0.246078, 1)
texture_filter = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.5
offset_top = 223.0
offset_right = 38.5
offset_bottom = 263.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("1_hqtmt")
texture_pressed = ExtResource("2_tfrft")
texture_hover = ExtResource("3_uv623")

[node name="Label" type="Label" parent="ButtonQuit"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Fechar"
label_settings = SubResource("LabelSettings_uv623")

[connection signal="pressed" from="ButtonStartGame" to="." method="_on_button_start_game_pressed"]
[connection signal="pressed" from="ButtonOptions" to="." method="_on_button_options_pressed"]
[connection signal="pressed" from="ButtonCredits" to="." method="_on_button_credits_pressed"]
[connection signal="pressed" from="ButtonQuit" to="." method="_on_button_quit_pressed"]
